math-core/tests/snapshots/wiki_test__wiki041.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\cup, \\Cup, \\sqcup, \\bigcup, \\bigsqcup, \\uplus, \\biguplus"
---
<math>
    <mo>∪</mo>
    <mo>,</mo>
    <mo>⋓</mo>
    <mo>,</mo>
    <mo>⊔</mo>
    <mo>,</mo>
    <mo>⋃</mo>
    <mo>,</mo>
    <mo>⨆</mo>
    <mo>,</mo>
    <mo>⊎</mo>
    <mo>,</mo>
    <mo>⨄</mo>
</math>
