math-core/tests/snapshots/wiki_test__wiki042.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\setminus, \\smallsetminus, \\times"
---
<math>
    <mo lspace="0">∖</mo>
    <mo>,</mo>
    <mo>﹨</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">×</mo>
</math>
