math-core/tests/snapshots/wiki_test__wiki044.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\supset, \\Supset, \\sqsupset"
---
<math>
    <mo>⊃</mo>
    <mo>,</mo>
    <mo>⋑</mo>
    <mo>,</mo>
    <mo>⊐</mo>
</math>
