math-core/tests/snapshots/wiki_test__wiki049.snap
---
source: math-core/tests/wiki_test.rs
expression: "=, \\ne, \\neq, \\equiv, \\not\\equiv"
---
<math>
    <mo>=</mo>
    <mo>,</mo>
    <mo>≠</mo>
    <mo>,</mo>
    <mo>≠</mo>
    <mo>,</mo>
    <mo>≡</mo>
    <mo>,</mo>
    <mo>≡</mo>
</math>
