math-core/tests/snapshots/wiki_test__wiki053.snap
---
source: math-core/tests/wiki_test.rs
expression: "<, \\nless, \\ll, \\not\\ll, \\lll, \\not\\lll, \\lessdot"
---
<math>
    <mo>&lt;</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">≮</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">≪</mo>
    <mo>,</mo>
    <mo>≪</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">⋘</mo>
    <mo>,</mo>
    <mo>⋘</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">⋖</mo>
</math>
