math-core/tests/snapshots/wiki_test__wiki056.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\lessgtr, \\lesseqgtr, \\lesseqqgtr, \\gtrless, \\gtreqless, \\gtreqqless"
---
<math>
    <mo lspace="0">≶</mo>
    <mo>,</mo>
    <mo>⋚</mo>
    <mo>,</mo>
    <mo>⪋</mo>
    <mo>,</mo>
    <mo>≷</mo>
    <mo>,</mo>
    <mo>⋛</mo>
    <mo>,</mo>
    <mo>⪌</mo>
</math>
