math-core/tests/snapshots/wiki_test__wiki059.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\lesssim, \\lnsim, \\lessapprox, \\lnapprox"
---
<math>
    <mo lspace="0">≲</mo>
    <mo>,</mo>
    <mo>⋦</mo>
    <mo>,</mo>
    <mo>⪅</mo>
    <mo>,</mo>
    <mo>⪉</mo>
</math>
