math-core/tests/snapshots/wiki_test__wiki060.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\gtrsim, \\gnsim, \\gtrapprox, \\gnapprox"
---
<math>
    <mo>≳</mo>
    <mo>,</mo>
    <mo>⋧</mo>
    <mo>,</mo>
    <mo>⪆</mo>
    <mo>,</mo>
    <mo>⪊</mo>
</math>
